<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.craftybyte.portfolioapp.MainActivity">

    <Button
        android:id="@+id/appButtonID1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName1"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_weight="1"
    />
    <Button
        android:id="@+id/appButtonID2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName2"
        android:textAllCaps="true"
        android:layout_weight="1"
        />

    <Button
        android:id="@+id/appButtonID3"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName3"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/appButtonID4"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName4"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/appButtonID5"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName5"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_weight="1"
        />
    <Button
        android:id="@+id/appButtonID6"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appButtonName6"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_weight="1"
        />

</LinearLayout>